# Scheduler

./: CMakeLists.txt
Scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
scheduler_lib/: CMakeLists.txt  schedule_funcs.cpp  schedule_funcs.h  structs.h
test/: CMakeLists.txt  test_main.cpp  test_main.h  test_solving.cpp  test_validation.cpp
test/res/: input.json
